# lab06_light

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.929765b  CMakeLists.txt.user.a1f34df  README.md  data.qrc  lab6.pro  light.pro  main.cpp  resources.qrc
images/: sources.txt
src/: ReflSampler.cpp  ReflSampler.h  canvas2d.cpp  canvas2d.h  lightmodel.cpp  lightmodel.h  mainwindow.cpp  mainwindow.h  param.h  rgba.cpp  rgba.h  utils.cpp  utils.h
